<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey_background"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_large"
            android:paddingTop="@dimen/padding_extra_large"
            android:text="GUARANTEE" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/edittextBackgroundWhite"
            android:padding="@dimen/padding_large"
            android:text="@string/legal_guarantee" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey_background"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_large"
            android:paddingTop="@dimen/padding_extra_large"
            android:text="ALTERATIONS" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/edittextBackgroundWhite"
            android:padding="@dimen/padding_large"
            android:text="@string/legal_alterations" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey_background"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_large"
            android:paddingTop="@dimen/padding_extra_large"
            android:text="LIMITATIONS" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/edittextBackgroundWhite"
            android:padding="@dimen/padding_large"
            android:text="@string/legal_limitations" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey_background"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_large"
            android:paddingTop="@dimen/padding_extra_large"
            android:text="CANCELLATIONS" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/edittextBackgroundWhite"
            android:padding="@dimen/padding_large"
            android:text="@string/legal_cancellation" />

    </LinearLayout>
</ScrollView>